# houndarr

./: .dockerignore  .editorconfig  .gitignore  .workmux.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  justfile  lychee.toml  package.json  pnpm-lock.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.json
.claude/commands/: bump.md  catchup.md  check.md  fix-issue.md  merge.md  test.md
.claude/rules/: hook-compliance.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/prompts/: triage-system.md
.github/workflows/: ai-moderator.yml  ai-triage.yml  api-snapshot-refresh.yml  browser-e2e.yml  chart.yml  ci-skip.yml  cleanup-actions-cache.yml  dependency-review.yml  docker.yml  dockerfile-lint.yml  link-check.yml  lock-threads.yml  pages.yml  quality.yml  release.yml  security-smoke-test.yml  security.yml  stale.yml  test-deploy.yml  tests.yml  unstale.yml  version-check.yml  workflow-lint.yml
charts/houndarr/: .helmignore  Chart.yaml  values.yaml
charts/houndarr/templates/: NOTES.txt  _helpers.tpl  ingress.yaml  service-web.yaml  service.yaml  statefulset.yaml
docs/: api-context.md  arr-search-commands.md  commenting-standard.md  maintenance.md  settings.md  trust-and-security.md
docs/api/: README.md  arr-search-commands.md  whisparr_v2_openapi.json
docs/refactor/: track-d-route-loc-histogram.md  track-e-notes.md  track-g-notes.md  track-h-notes.md  track-i-env-audit.md
scripts/: bench_586_end_to_end.py  bench_586_replication.py  bench_586_v14_update_only.py  security_smoke_test.sh
scripts/e2e_browser/: README.md  capture_baselines.sh
scripts/marketing/: .gitignore  README.md  capture_screenshots.py  demo_cycles.py  seed_demo_data.py  serve_demo.py
scripts/marketing/demo_titles/: albums.json  books.json  movies.json  tv.json
src/houndarr/: __init__.py  __main__.py  app.py  auth.py  bootstrap.py  cache_headers.py  config.py  crypto.py  database.py  deps.py  enums.py  errors.py  protocols.py  value_objects.py
src/houndarr/auth/: __init__.py  csrf.py  (+7 more)
tests/: conftest.py  test_app_lifespan_pinning.py  test_app_startup.py  test_auth.py  test_config.py  test_database.py  test_database_edge_cases.py  test_docs_api.py  test_enums.py  test_error_paths.py  test_errors.py  test_huntarr_vulns.py  test_protocols_repositories.py  test_proxy_auth.py  test_value_objects.py  test_version.py
tests/_artifacts/: README.md  app.built.css.sha256
tests/e2e_browser/: conftest.py  mock_arr.py  requirements.txt  test_flows.py
tests/mock_arr/: README.md  __init__.py  _common.py  probe_context_mode.py  probe_cooldown.py  probe_distribution.py  probe_hourly_cap.py  probe_upgrade_coverage.py  server.py  store.py
tests/test_bootstrap/: test_bootstrap_non_web.py
tests/test_build/: test_css_hash_pinning.py
tests/test_clients/: test_base_pinning.py  test_client_edge_cases.py  test_lidarr.py  test_queue_status_pinning.py  test_radarr.py  test_readarr.py  test_sonarr.py  test_wanted_total_error_pinning.py  test_whisparr.py  test_whisparr_v2.py  test_whisparr_v3.py  test_wire_contracts_pinning.py
tests/test_e2e/: test_search_cycle.py
tests/test_engine/: conftest.py  test_adapter_candidate_pinning.py  test_adapter_edge_cases.py  test_adapter_narrow_catch_pinning.py  test_adapter_protocols.py  test_adapter_registry_gate.py  test_api_data_handling.py  test_backlog_scanning.py  test_candidates.py  test_candidates_pinning.py  test_cooldown_edge_cases.py  test_dataclass_slots_audit.py  test_dispatch_pool_wrap_pinning.py  test_golden_search_log.py  test_instance_structure_gate.py  test_offset_persist_wrap_pinning.py  test_page_offset_rotation.py  test_queue_backpressure.py  test_random_deck.py  test_release_timing.py  test_retry_jitter_pinning.py  test_search_dispatch.py  test_search_loop.py  test_search_loop_helpers_pinning.py  test_search_pass_config_pinning.py  test_search_pass_interactions.py  test_skip_throttle_concurrency.py  test_supervisor.py  test_supervisor_edge_cases.py  test_supervisor_pinning.py  test_time_window_gate.py  test_typed_errors_pinning.py  test_upgrade_pass.py
tests/test_gates/: test_bootstrap_wiring_gate.py  test_css_component_gate.py  test_htmx_contract_gate.py  test_macro_inventory_gate.py
tests/test_repositories/: test_cooldowns.py  test_instances_reads.py  test_instances_writes.py  test_search_log.py  test_settings.py
tests/test_routes/: test_admin.py  test_admin_pinning.py  test_cache_headers.py  test_changelog.py  test_changelog_full.py  test_changelog_pinning.py  test_handler_loc.py  test_health.py  test_hx_headers_pinning.py  test_hx_helpers_pinning.py  test_log_filters.py  test_logs.py  test_logs_head.py  test_logs_pinning.py  test_master_key_depends_pinning.py  test_pages.py  test_pages_pinning.py  test_run_now.py  test_settings.py  test_settings_account_pinning.py  test_settings_instances_pinning.py  test_status.py  test_status_cache_integration.py  test_status_pinning.py  test_supervisor_depends_pinning.py  test_templates_singleton_pinning.py  test_update_check_route_pinning.py
tests/test_services/: test_admin.py  test_changelog.py  test_cooldown.py  test_cooldown_reconcile.py  test_factory_reset_pinning.py  test_instance_immutability_pinning.py  test_instance_substructs.py  test_instances.py  test_metrics_cache.py  test_run_connection_test.py  test_skip_log_pinning.py  test_time_window.py  test_time_window_pinning.py  test_update_check.py  test_url_validation.py
tests/test_templates/: conftest.py  test_macros_alerts.py  test_macros_badges.py  test_macros_buttons.py  test_macros_forms.py  test_macros_htmx.py  test_macros_instances.py  test_macros_layout.py  test_macros_modals.py  test_pinned_render.py
tests/test_tracks/: test_track_e_gate.py  test_track_g_gate.py
website/: docusaurus.config.ts  package-lock.json  package.json  pnpm-lock.yaml  sidebars.ts
website/docs/: faq.md
(+179 files in other folders)
